styling update-choose us+text

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <section class="content-card">
 
         <div class="content-card-frame">
-
+            <!-- choose us nav desktop-->
             <div class="content-card-nav">
 
                 <div class="content-card-head">
@@ -346,7 +346,14 @@
                     <p class="title3" onclick="chooseUs(3)">Our partners</p>
                 </div>
             </div>
-
+            <!-- choose us nav mobile-->
+            <div class="chooseus-nav-mobile">
+                <div class="content-card-head">
+                    <p class="headstyle1">Why choose us</p>
+                    <hr width="90%"> 
+                </div>
+            </div>
+            <!-- naviagtion END-->
             <div class="chooseus-content" id="1">
                 <div class="chooseUsText">
                     <p class="text-cont" >We are a team of dedicated florists. We understand how important it is to stand out in a creative yet interesting way. Coming up with new ideas and improving our services are just a few of our goals and we try to maintain the beauty and purity of flowers with each step we take.</p>     
