performance and seo improvements

--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
     <!--CEO-->
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta name="Kvety Cemerica welcome to our flower atelier" content="what we offer, why choose us, ">
-    <!--link to css animation library-->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
-
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <title>Kvety Cemerica</title>
 </head>
 <style>
@@ -44,23 +37,23 @@
         <nav class="navbar">
 
             <ul class="nav-logotype">
-                <img src="img/čemerica-loho-name.webp" class="nav-logo">
+                <img src="img/čemerica-loho-name.webp" class="nav-logo" alt="logo">
                 <div class="vl"></div>
                 <li class="nav-item">
-                    <a class="nav-link" href="" class="nav-link">Flower studio</a>
+                    <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
                 </li>
             </ul>
 
             <ul class="nav-menu">  
                 <li class="nav-item-desk">
-                    <a class="nav-link" href="" class="nav-link">Wedding plans</a>
+                    <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
                 </li>
                 <div class="vl"></div>
                 <li class="nav-item-desk">
-                    <a class="nav-link"href="" class="nav-link">Bouquetes</a>
+                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link"href="" class="nav-link">More</a>
+                    <a class="nav-link"href="404.html" class="nav-link">More</a>
                 </li>
             </ul>
         </nav>
@@ -547,17 +540,17 @@
     </div>
 
     <div class="footercontent">
-        <p>Terms of use</p>
-        <p>Cookies</p>
-        <p>Privacy policy</p>
+        <a href="404.hmtl"><p>Terms of use</p></a>
+        <a href="404.hmtl"><p>Cookies</p></a>
+        <a href="404.hmtl"><p>Privacy policy</p></a>
     </div>
 
 </footer>
 
 <section class="boringInfo">
-    <a class="headstyle2" href="#">Privacy policy</a>
-    <a class="headstyle2" href="#">Terms of use</a>
-    <a class="headstyle2" href="#">Cookie policy</a>
+    <a class="headstyle2" href="404.html">Privacy policy</a>
+    <a class="headstyle2" href="404.html">Terms of use</a>
+    <a class="headstyle2" href="404.html">Cookie policy</a>
 </section>
 
     <script src="main.js"></script>
