--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -8,15 +8,8 @@
     <!--SEO-->
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta name="Wedding decorations and flower shop" content="Style your own wedding with Kvety Cemerica">
-    <!--link to css animation library-->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
-
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <title>Kvety Cemerica</title>
 </head>
 <style>
@@ -54,14 +47,14 @@
 
             <ul class="nav-menu">  
                 <li class="nav-item-desk">
-                    <a class="nav-link" href="" class="nav-link">Wedding plans</a>
+                    <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
                 </li>
                 <div class="vl"></div>
                 <li class="nav-item-desk">
-                    <a class="nav-link"href="" class="nav-link">Bouquetes</a>
+                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link"href="" class="nav-link">More</a>
+                    <a class="nav-link"href="404.hmtl" class="nav-link">More</a>
                 </li>
             </ul>
         </nav>
@@ -370,17 +363,17 @@
     </div>
 
     <div class="footercontent">
-        <p>Terms of use</p>
-        <p>Cookies</p>
-        <p>Privacy policy</p>
+        <a href="404.html"><p>Terms of use</p></a>
+        <a href="404.html"><p>Cookies</p></a>
+        <a href="404.html"><p>Privacy policy</p></a>
     </div>
 
 </footer>
 
       <section class="boringInfo">
-        <a href="#">Privacy policy</a>
-        <a class="termsOfUse" href="#">Terms of use</a>
-        <a href="#">Cookie policy</a>
+        <a href="404.html">Privacy policy</a>
+        <a href="404.html">Terms of use</a>
+        <a href="404.html">Cookie policy</a>
       </section>
 
     
