--- a/presetParts.html
+++ b/presetParts.html
@@ -7,12 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--SEO-->
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <meta
-      name="Kvety cemerica preset parts "
-      content="What we offer in our wedding programmes"
-    />
-    <!--link to css animation library-->
-    
+    <meta name="description"content="What we offer in our wedding decoration programmes"/>
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
@@ -51,7 +47,7 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/čemerica-loho-name.webp" class="nav-logo" />
+          <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo" />
           <div class="vl"></div>
           <li class="nav-item">
             <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -89,9 +85,9 @@
             <button class="button-28" id="downButton">Show more</button>
           </section>
           <section class="presetSlideshow">
-            <img class="mySlides2" src="img/bridesmatesdecoration1.webp" />
-            <img class="mySlides2" src="img/bridesmatesdecoration2.webp" />
-            <img class="mySlides2" src="img/buttonholes1.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
             <section class="slideShowPreset" style="width: 100%">
               <div class="slider-cell white-cell" onclick="currentDiv(1)"></div>
               <div class="slider-cell white-cell" onclick="currentDiv(2)"></div>
@@ -309,7 +305,7 @@
       </div>
 
       <div class="footercontent">
-        <a href="https://www.facebook.com/kvetycemerica">
+        <a href="https://www.facebook.com/kvetycemerica"aria-label="Facebook">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -327,7 +323,7 @@
           </svg>
         </a>
 
-        <a href="https://www.instagram.com/kvety_cemerica/">
+        <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -360,7 +356,7 @@
       </div>
 
       <div class="footericons-desktop">
-        <a href="https://www.facebook.com/kvetycemerica">
+        <a href="https://www.facebook.com/kvetycemerica"aria-label="Facebook">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -377,7 +373,7 @@
             />
           </svg>
         </a>
-        <a href="https://www.instagram.com/kvety_cemerica/">
+        <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
