--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--SEO-->
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-    <meta name="Wedding decorations and flower shop" content="Style your own wedding with Kvety Cemerica">
+    <meta name="description" content="Choose wedding decoration programme">
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
@@ -38,7 +39,7 @@
         <nav class="navbar">
 
             <ul class="nav-logotype">
-                <img src="img/čemerica-loho-name.webp" class="nav-logo">
+                <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo">
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -69,21 +70,21 @@
     <section id="featured-container">
 
         <div id="featured">
-            <dl class="featured-text">
+            <div class="featured-text">
                 <p class="featured-inspired">Discover</p>
                     <hr width="90%">
                 <p id="inspiration">Our preset configurator</p>    
                 <p class="inspired">loremipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit culpa facere temporibus animi debitis iusto magni esse officia obcaecati, saepe ea a modi odio cumque, vitae accusantium. Officia, ipsa!</p>     
                 <button class="button-28" id="downButton" >Show more</button>
-            </dl>
+            </div>
             <div class="featuredImgFrame">
-                <img class="featuredImg" src="img/cardecoration3.webp">
+                <img class="featuredImg" alt="Decoration" src="img/cardecoration3.webp">
             </div>
         </div>
 
         <div id="featured-mobile">
             <div class="featuredImgFrameMobile">
-                <img class="featuredImg" src="img/cardecoration3.webp">
+                <img class="featuredImg" alt="Decoration" src="img/cardecoration3.webp">
             </div>
             
             <div class="featured-text">
@@ -129,10 +130,10 @@
                 <div class="prog-desc-frame">
                     <p class="title1">Full wedding program</p>
                     <hr width="70%">
-                    <dl class="prog-description">
+                    <div class="prog-description">
                         <p>As the name suggests, this program includes the decorations that are a must for every wedding. From the classic bride bouquet to beautifully arranged car decorations, we’ve got it all covered for you.All of the options are customizable, according to your preferences.
                         </p>
-                    </dl>
+                    </div>
                 </div>
             </a>
             </div>
@@ -149,10 +150,10 @@
                     <p class="title1">Partial program</p>
                     <hr width="70%">
                 </div>
-                <dl class="prog-description">
+                <div class="prog-description">
                     <p>Whether you want your wedding to look simpler, or there are certain decorations you’re looking for, this is the option for you. All of the options are customizable, according to your preferences.
                    </p>
-                </dl>     
+                </div>     
             </a>   
             </div>
 
@@ -168,11 +169,11 @@
                     <p class="title1">Base program</p>
                     <hr width="70%">
                 </div>
-                <dl class="prog-description">
+                <div class="prog-description">
                     <p>As the name suggests, this program includes the decorations that are a must for every wedding. Discover the essential budget friendly, and carefully crafted products you need. All of the options are customizable, according to your preferences.
                     This program offers you all the essentials for a perfect wedding!                        
                    </p>
-                </dl>  
+                </div>  
             </a>      
             </div>
         </div>
@@ -274,7 +275,7 @@
   
     <div class="footercontent">
 
-        <a href="https://www.facebook.com/kvetycemerica">
+        <a href="https://www.facebook.com/kvetycemerica"aria-label="Facebook">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -292,7 +293,7 @@
           </svg>
         </a>
 
-        <a href="https://www.instagram.com/kvety_cemerica/">
+        <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -326,7 +327,7 @@
     </div>
 
     <div class="footericons-desktop">
-        <a href="https://www.facebook.com/kvetycemerica">
+        <a href="https://www.facebook.com/kvetycemerica"aria-label="Facebook">
             <svg
                 class="someIcons"
                 xmlns="http://www.w3.org/2000/svg"
@@ -343,7 +344,7 @@
                 />
             </svg>
         </a>
-        <a href="https://www.instagram.com/kvety_cemerica/">
+        <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
             <svg
                 class="someIcons"
                 xmlns="http://www.w3.org/2000/svg"
