deleted no index, nofollow changed more to bouquetes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--CEO-->
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta name="description" content="Kvety Cemerica welcome to our flower atelier">
-    
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
@@ -54,7 +52,7 @@
                     <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link"href="404.html" class="nav-link">More</a>
+                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
             </ul>
         </nav>
