--- a/presetParts.html
+++ b/presetParts.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--SEO-->
-    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
     <meta name="description"content="What we offer in our wedding decoration programmes"/>
     <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
     <!--Link to css sheet-->
@@ -63,7 +62,7 @@
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
           <li class="nav-mobile">
-            <a class="nav-link" href="404.html" class="nav-link">More</a>
+            <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
         </ul>
       </nav>
