--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--SEO-->
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta name="description" content="Choose wedding decoration programme">
     <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
     <!--Link to css sheet-->
@@ -55,7 +54,7 @@
                     <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link"href="404.hmtl" class="nav-link">More</a>
+                    <a class="nav-link"href="404.hmtl" class="nav-link">Bouquetes</a>
                 </li>
             </ul>
         </nav>
