--- a/flower-availability.html
+++ b/flower-availability.html
@@ -64,13 +64,33 @@
 <!-- navigation bar END -->
 <!-- season wheel -->
 <section class="season-wheel">
+
     <div class="seasons-frame">
-        <p class="season">January</p>
-        <p class="season">February</p>
-        <p class="season">March</p>
-        <p class="season">April</p>
-        <p class="season">May</p>
+
+        <p class="season" id="january">January</p>
+        <p class="season" id="february">February</p>
+        <p class="season" is="march">March</p>
+        <p class="season" id="april">April</p>
+        <p class="season" id="may">May</p>
+        <p class="season" id="june">June</p>
+        <p class="season" id="july">July</p>
+        <p class="season" id="august">August</p>
+        <p class="season" id="september">September</p>
+        <p class="season" id="october">October</p>
+        <p class="season" id="november">November</p>
+        <p class="season" id="december">December</p>
+        
     </div>
+
+<div class="wheel-section">
+    <div class="wheel-frame">
+        <img class="season-pics" id="months" src="img/seasons_wheel.png">
+        <img class="season-pics" id="spring" src="img/spring.png">
+        <img class="season-pics" id="summer" src="img/summer.png">
+        <img class="season-pics" id="autum" src="img/autum.png">
+        <img class="season-pics" id="winter" src="img/winter.png">
+    </div>
+</div>
 
     <div class="flowers-container">
         <div class="flower-frame" id="english-rose">
@@ -82,6 +102,17 @@
             <img src="img/lisianthus.jpg" class="flower">
             <p class="flower-name">Lisianthus</p>
         </div>
+
+        <div class="flower-frame" id="">
+            <img src="img/lisianthus.jpg" class="flower">
+            <p class="flower-name">Lisianthus</p>
+        </div>
+
+        <div class="flower-frame" id="">
+            <img src="img/lisianthus.jpg" class="flower">
+            <p class="flower-name">Lisianthus</p>
+        </div>
+
     </div>
 
 </section>
