compelted js index and preset

--- a/presetParts.html
+++ b/presetParts.html
@@ -98,19 +98,19 @@
     </div>
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(1)">Bouquet for bride</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(2)">Feather for wedding guests</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(3)">Wedding hall decorations</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(4)">Church decorations</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(5)">Car decorations</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(6)">Bridesmaids decorations</p>
-        <p class="presetOption"
+        <p class="activeOption"
           onclick="currentPresetSlide(7)">Other decorations</p>
       </section>
       <!--bouquete for bride desktop pictures-->
