style your wedding fix

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -31,8 +31,7 @@
         list-style-type: none; 
     }
 </style>
-<body onload="hideOptions()">
-
+<body onload="currentSlide(1)">
     <!-- navigation bar-->
     <header>
         <nav class="navbar">
