--- a/presetParts.html
+++ b/presetParts.html
@@ -316,7 +316,7 @@
       <button class="btn1-light">
         <a href="style-your-wedding.html">Previous step</a>
       </button>
-      <button class="btn1-light"><a href="#">Next step</a></button>
+      <button class="btn1-light"><a href="flower-availability.html">Next step</a></button>
     </section>
     <!--Footer mobile-->
     <footer class="footer-mobile">
