--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -99,7 +99,7 @@
 <!-- featured END-->
 
 
-<!-- promgrammes-->
+<!-- promgrammes Desktop-->
 <section class="programs">
 
     <div class="prgtxtcnt">
@@ -176,6 +176,7 @@
             </div>
         </div>
 </section>
+<!-- promgrammes Desktop END-->
 
 <section id="programs-mobile">
 
