improving preset preview

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--CEO-->
-
     <meta name="description" content="Kvety Cemerica welcome to our flower atelier">
-
     <!--Link to css sheet-->
-    
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
     <link rel="shortcut icon" type="image/jpg" href="img/FAVICON.png"/>
