created last 2 programmes and minor fixes

--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -141,15 +141,6 @@
           Wedding hall decorations
         </p>
         <p class="activeOption" onclick="currentPresetSlide(4)">
-          Church decorations
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(5)">
-          Car decorations
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(6)">
-          Bridesmaids decorations
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(7)">
           Other decorations
         </p>
         <section class="presetTextAdjust">
@@ -161,31 +152,13 @@
         <section class="presetTextAdjust">
           <p class="presetText">
             <u>Possible options</u><br />You will be able to choose from
-            different feathers for guests
+            different feathers for wedding guests
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
             <u>Possible options</u><br />You will be able to choose from
             different wedding hall decorations
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different church decorations
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different car decorations
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different bridesmaids decorations
           </p>
         </section>
         <section class="presetTextAdjust">
@@ -223,39 +196,6 @@
         class="presetPictureDesktop"
         src="img/weddingvenue3.webp"
         alt="Bouquetes"
-      />
-      <!--Church decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/churchdecorations2.webp"
-        alt="Church decorations"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/churchdecorations1.webp"
-        alt="Chair decorations"
-      />
-      <!--Car decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/cardecoration2.webp"
-        alt="Car decoration"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/cardecoration1.webp"
-        alt="Car decoration"
-      />
-      <!--Bridesmaids decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/bridesmatesdecoration2.webp"
-        alt="Bridesmaids decoration"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/bridesmatesdecoration1.webp"
-        alt="Bridesmaids decoration"
       />
       <!--Other decorations desktop pictures-->
       <img
@@ -331,57 +271,6 @@
     </section>
     <!--part4-->
     <section class="bouquetePart">
-      <h2>Church decorations</h2>
-
-      <img
-        class="shownProduct"
-        src="img/churchdecorations1.webp"
-        alt="Church decoration"
-      />
-      <h3></h3>
-      <section>
-        <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different church decorations
-        </p>
-      </section>
-    </section>
-    <!--part5-->
-    <section class="bouquetePart">
-      <h2>Car decorations</h2>
-
-      <img
-        class="shownProduct"
-        src="img/cardecoration3.webp"
-        alt="Car decorations"
-      />
-      <h3></h3>
-      <section>
-        <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different car decorations
-        </p>
-      </section>
-    </section>
-    <!--part6-->
-    <section class="bouquetePart">
-      <h2>Bridesmaids decorations</h2>
-
-      <img
-        class="shownProduct"
-        src="img/bridesmatesdecoration2.webp"
-        alt="bridesmaids decoration"
-      />
-      <h3></h3>
-      <section>
-        <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different bridesmaids decorations
-        </p>
-      </section>
-    </section>
-    <!--part7-->
-    <section class="bouquetePart">
       <h2>Other decorations</h2>
 
       <img
@@ -415,23 +304,8 @@
       ></div>
       <div
         class="slider-cell slider"
-        id="slid4"
-        onclick="currentPresetSlideMob(4)"
-      ></div>
-      <div
-        class="slider-cell slider"
-        id="slid5"
-        onclick="currentPresetSlideMob(5)"
-      ></div>
-      <div
-        class="slider-cell slider"
-        id="slid6"
-        onclick="currentPresetSlideMob(6)"
-      ></div>
-      <div
-        class="slider-cell slider"
         id="slid7"
-        onclick="currentPresetSlideMob(7)"
+        onclick="currentPresetSlideMob(4)"
       ></div>
     </section>
     <section class="navigationButtonsMobile">
