--- a/partialProgramme.html
+++ b/partialProgramme.html
@@ -141,15 +141,12 @@
           Wedding hall decorations
         </p>
         <p class="activeOption" onclick="currentPresetSlide(4)">
-          Church decorations
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(5)">
           Car decorations
         </p>
-        <p class="activeOption" onclick="currentPresetSlide(6)">
+        <p class="activeOption" onclick="currentPresetSlide(5)">
           Bridesmaids decorations
         </p>
-        <p class="activeOption" onclick="currentPresetSlide(7)">
+        <p class="activeOption" onclick="currentPresetSlide(6)">
           Other decorations
         </p>
         <section class="presetTextAdjust">
@@ -161,19 +158,13 @@
         <section class="presetTextAdjust">
           <p class="presetText">
             <u>Possible options</u><br />You will be able to choose from
-            different feathers for guests
+            different feathers for wedding guests
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
             <u>Possible options</u><br />You will be able to choose from
             different wedding hall decorations
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different church decorations
           </p>
         </section>
         <section class="presetTextAdjust">
@@ -234,12 +225,6 @@
         class="presetPictureDesktop"
         src="img/churchdecorations1.webp"
         alt="Chair decorations"
-      />
-      <!--Car decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/cardecoration2.webp"
-        alt="Car decoration"
       />
       <img
         class="presetPictureDesktop"
@@ -331,23 +316,6 @@
     </section>
     <!--part4-->
     <section class="bouquetePart">
-      <h2>Church decorations</h2>
-
-      <img
-        class="shownProduct"
-        src="img/churchdecorations1.webp"
-        alt="Church decoration"
-      />
-      <h3></h3>
-      <section>
-        <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different church decorations
-        </p>
-      </section>
-    </section>
-    <!--part5-->
-    <section class="bouquetePart">
       <h2>Car decorations</h2>
 
       <img
@@ -363,7 +331,7 @@
         </p>
       </section>
     </section>
-    <!--part6-->
+    <!--part5-->
     <section class="bouquetePart">
       <h2>Bridesmaids decorations</h2>
 
@@ -380,7 +348,7 @@
         </p>
       </section>
     </section>
-    <!--part7-->
+    <!--part6-->
     <section class="bouquetePart">
       <h2>Other decorations</h2>
 
@@ -415,23 +383,18 @@
       ></div>
       <div
         class="slider-cell slider"
-        id="slid4"
+        id="slid5"
         onclick="currentPresetSlideMob(4)"
       ></div>
       <div
         class="slider-cell slider"
-        id="slid5"
+        id="slid6"
         onclick="currentPresetSlideMob(5)"
       ></div>
       <div
         class="slider-cell slider"
-        id="slid6"
-        onclick="currentPresetSlideMob(6)"
-      ></div>
-      <div
-        class="slider-cell slider"
         id="slid7"
-        onclick="currentPresetSlideMob(7)"
+        onclick="currentPresetSlideMob(6)"
       ></div>
     </section>
     <section class="navigationButtonsMobile">
