finished(almost) contact mobile and desktop

--- a/contact.html
+++ b/contact.html
@@ -83,14 +83,15 @@
       <section>
         <div id="presetPreview">
           <section class="preview-text">
-            <p class="featured-inspired">Get inspired</p>
+            <p class="featured-inspired">Discover</p>
             <hr width="90%" />
-            <p id="inspiration">Wedding inspiration</p>
+            <p id="inspiration">Configuration preview</p>
             <p class="discoverPresetsText">
-              In this step you are able to go through every part of this program
-              to see if it's the right one for you.
+              This is your last step to perfect wedding day. In this step you
+              can see your configuration, here you can also choose to contact us
+              so we can talk more about your requirements
             </p>
-            <button class="button-28" id="downButton">Show more</button>
+            <button class="button-28" id="downButton">See my preset</button>
           </section>
           <section class="presetSlideshow">
             <img
@@ -129,7 +130,47 @@
         </div>
       </section>
     </div>
-    <section class="navigationButtonsDesktop">
+    <!-- contact desktop grid-->
+    <h6>Your configuration</h6>
+    <section class="contactDesktopHeadingsGrid">
+      <p>Your chosen preset</p>
+      <p>Available flowers</p>
+      <p>Contact form</p>
+    </section>
+    <section class="contactDesktopGrid">
+      <section>
+        <p>Bouquet for birde</p>
+        <p>Feathers for wedding guests</p>
+        <p>Wedding hall decorations</p>
+        <p>Church decorations</p>
+        <p>Car decorations</p>
+        <p>Bridesmaids decorations</p>
+        <p>Other decorations</p>
+      </section>
+      <section class="availableFlowersSlide">
+        <img src="img/flowers/spring3.jpg" class="availableFlowers" alt="" />
+        <img src="img/flowers/spring2a.jpg" class="availableFlowers" alt="" />
+        <img src="img/flowers/spring1.jpg" class="availableFlowers" alt="" />
+      </section>
+      <section class="contactMobile">
+        <section class="contactMobileContent">
+          <p class="contactText">
+            By contacting us, we will receive your customisation and then we
+            will be able to give you a price estimate
+          </p>
+          <input type="text" placeholder="Name" class="contactInput" /> <br />
+          <input type="text" placeholder="E-mail" class="contactInput" /> <br />
+          <input type="text" placeholder="Phone" class="contactInput" /> <br />
+          <input
+            type="text"
+            placeholder="Your message"
+            class="contactInput yourMessage"
+          /><br />
+          <button class="btn1-light contactButton">Contact</button>
+        </section>
+      </section>
+    </section>
+    <section class="navigationButtonsDesktopFix">
       <button class="btn1-light">
         <a href="style-your-wedding.html">Previous step</a>
       </button>
@@ -140,36 +181,38 @@
     <!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx-->
     <div class="carousel fadePreview"></div>
     <!--YOUR CONFIGURATION CONTENT-->
-    <h1>Your configuration</h1>
-    <h2>Chosen preset</h2>
-    <p class="chosenText">Complete programme</p>
-    <h2>Your chosen month</h2>
-    <p class="chosenText">May</p>
-    <h2>Contact form</h2>
-    <section class="contactMobile">
-      <section class="contactMobileContent">
-        <p class="contactText">
-          By contacting us, we will receive your customisation and then we will
-          be able to give you a price estimate
-        </p>
-        <input type="text" placeholder="Name" class="contactInput" /> <br />
-        <input type="text" placeholder="E-mail" class="contactInput" /> <br />
-        <input type="text" placeholder="Phone" class="contactInput" /> <br />
-        <input
-          type="text"
-          placeholder="Your message"
-          class="contactInput yourMessage"
-        /><br />
-        <button class="btn1-light contactButton">Contact</button>
+    <section class="yourConfigurationSection">
+      <h1>Your configuration</h1>
+      <h2>Chosen preset</h2>
+      <p class="chosenText">Complete programme</p>
+      <h2>Your chosen month</h2>
+      <p class="chosenText">May</p>
+      <h2>Contact form</h2>
+      <section class="contactMobile">
+        <section class="contactMobileContent">
+          <p class="contactText">
+            By contacting us, we will receive your customisation and then we
+            will be able to give you a price estimate
+          </p>
+          <input type="text" placeholder="Name" class="contactInput" /> <br />
+          <input type="text" placeholder="E-mail" class="contactInput" /> <br />
+          <input type="text" placeholder="Phone" class="contactInput" /> <br />
+          <input
+            type="text"
+            placeholder="Your message"
+            class="contactInput yourMessage"
+          /><br />
+          <button class="btn1-light contactButton">Contact</button>
+        </section>
       </section>
-    </section>
-    <section class="navigationButtonsMobile">
-      <button class="btn1-light">
-        <a href="style-your-wedding.html">Previous step</a>
-      </button>
-      <button class="btn1-light">
-        <a href="flower-availability.html">Next step</a>
-      </button>
+      <section class="navigationButtonsMobile">
+        <button class="btn1-light">
+          <a href="style-your-wedding.html">Previous step</a>
+        </button>
+        <button class="btn1-light">
+          <a href="flower-availability.html">Next step</a>
+        </button>
+      </section>
     </section>
     <!--Footer mobile-->
     <footer class="footer-mobile">
