--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
     <link rel="shortcut icon" type="image/jpg" href="img/FAVICON.png"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TEKWGLVPBP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TEKWGLVPBP');
+    </script>
 </head>
 <style>
     a:link { text-decoration: none; }
